Filenames in submissions no longer wrap.

--- a/galah/web/galahweb/static/galah.css
+++ b/galah/web/galahweb/static/galah.css
@@ -120,6 +120,7 @@ a {
     border: 1px solid #ccc;
     background-color: white;
     display: inline;
+    white-space: nowrap;
 }
 
 #submissions h3 {
